# pre-commit-hooks

./: .codespell-ignore-words  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AUTHORS  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  README.rst  index.html  pyproject.toml  robots.txt  setup.py  sitemap.xml  tox.ini  versions.json
.github/: CODEOWNERS  dependabot.yml  labels.yml
.github/workflows/: ci_cd.yml  integration_tests.yml  label.yml
.reuse/: dep5
changelog.d/: 1.added.md  2.fixed.md
changelog.d/newsfragments/: .gitignore
doc/: .vale.ini  Makefile  make.bat
doc/changelog.d/: 159.dependencies.md  163.changed.md  164.added.md  167.changed.md  168.dependencies.md  169.dependencies.md  170.changed.md  172.dependencies.md  175.dependencies.md  176.dependencies.md  178.dependencies.md  180.dependencies.md  181.dependencies.md  182.dependencies.md  183.added.md  185.fixed.md  186.changed.md  187.dependencies.md  188.dependencies.md  189.dependencies.md  191.miscellaneous.md  192.dependencies.md  193.changed.md  194.fixed.md  195.dependencies.md  198.dependencies.md  201.changed.md  202.changed.md  204.dependencies.md  206.dependencies.md  207.dependencies.md  208.dependencies.md  209.miscellaneous.md  211.changed.md  212.dependencies.md  215.added.md  217.added.md  218.dependencies.md  219.documentation.md  222.dependencies.md  (+114 more)
doc/source/: changelog.rst  conf.py  faq.rst  index.rst
doc/source/_autoapi_templates/: index.rst
doc/source/_templates/: README.md
doc/source/contribute/: add-hook.rst  index.rst  testing.rst
doc/source/getting-started/: index.rst
doc/source/getting-started/add-license-headers/: customize-hook.rst  faq.rst  index.rst  issues-limitations.rst
doc/source/getting-started/gh-pin/: index.rst
doc/source/getting-started/technical-review/: index.rst
examples/: README.md
src/: test_file.py
src/ansys/pre_commit_hooks/: __init__.py  _version.py  add_license_headers.py  add_license_headers_original.py  edit_changelog.py  ghaction_pin.py  hashed_pre_commit.py  main.py  tech_review.py  test.py
src/ansys/pre_commit_hooks/assets/: licenses.json
src/ansys/pre_commit_hooks/templates/: AUTHORS  AUTHORS.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  README.rst  dependabot.yml
tests/: __init__.py  bad_chars.py  test_add_license_headers.py  test_dependencies.py  test_ghaction_pin.py  test_hashed_pre_commit.py  test_metadata.py  test_reuse.py  test_tech_review.py  test_template.jinja2
tests/LICENSES/: ECL-1.0.txt
tests/templates/: test_template.jinja2
tests/test_add_license_headers_files/: index_error.scss
tests/test_add_license_headers_files/LICENSES/: LICENSE
tests/test_add_license_headers_files/templates/: copyright_only.jinja2
tests/test_ghaction_pin_files/: already_pinned.yml  unpinned.yml
tests/test_reuse_files/: bad_chars.py
tests/test_tech_review_files/: AUTHORS  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  dependabot_pyproject.yml  dependabot_setuptools.yml  pyproject.toml
version/: index.html
version/0.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.1/_sources/autoapi/: index.rst.txt
version/0.1/autoapi/: index.html
version/0.1/autoapi/pre_commit_hooks/: index.html
version/0.2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.2/_static/: documentation_options.js
version/0.2/autoapi/: index.html
version/0.2/autoapi/pre_commit_hooks/: announcement.html  index.html
version/0.3/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.3/_sources/api/: index.rst.txt
version/0.3/api/: index.html
version/0.4/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.4/_sources/: index.rst.txt
version/0.4/_static/: search.json
version/0.4/api/: index.html
version/0.5/: changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.5/_sources/: changelog.rst.txt
version/0.5/_sources/api/: index.rst.txt
version/0.5/_static/: documentation_options.js  search.json
version/0.5/api/: index.html
version/0.5/contribute/: index.html
version/0.5/getting-started/add-license-headers/: faq.html
version/0.5/getting-started/technical-review/: index.html
version/0.6/: changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.6/_sources/: changelog.rst.txt
version/0.6/_static/: search.json
version/0.6/api/: index.html
version/0.6/contribute/: add-hook.html  index.html  testing.html
version/0.6/getting-started/: index.html
version/0.7/: changelog.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.7/_sources/: changelog.rst.txt
version/0.7/api/: index.html
version/0.7/contribute/: index.html
version/0.7/getting-started/: index.html
version/0.8/: changelog.html  genindex.html  index.html  objects.inv
version/0.8/_sources/: changelog.rst.txt
version/0.8/api/: index.html
version/0.8/contribute/: add-hook.html  testing.html
version/0.8/getting-started/: index.html
version/dev/: changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/dev/_sources/: changelog.rst.txt  index.rst.txt
version/dev/_static/: search.json
version/dev/api/: index.html
version/dev/autoapi/: index.html
version/dev/contribute/: add-hook.html  index.html  testing.html
version/dev/getting-started/: index.html
version/stable/: .buildinfo  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/stable/_static/: search.json
version/stable/autoapi/: index.html
version/stable/contribute/: add-hook.html  index.html  testing.html
version/stable/getting-started/: index.html
(+196 files in other folders)
