[build-system]
requires = [
    "setuptools>=42.0",
    "GitPython==3.1.43",
    "Jinja2==3.1.4",
    "reuse==4.0.3",
    "requests==2.32.3",
    "semver==3.0.2",
    "toml==0.10.2",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
src_paths = ["doc", "src", "tests"]

[tool.codespell]
ignore-words = "doc/styles/config/vocabularies/ANSYS/accept.txt"

[tool.coverage.run]
source = ["ansys.pre_commit_hooks"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "--cov=ansys.pre_commit_hooks --cov-report term-missing -vv"
testpaths = [
    "tests",
]
markers = [
    "license_headers: marks tests for add-license-headers hook",
    "tech_review: marks tests for tech-review hook",
]

[tool.towncrier]
package = "ansys.pre_commit_hooks"
directory = "doc/changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "doc/changelog.d/changelog_template.jinja"
title_format = "## [{version}](https://github.com/ansys/pre-commit-hooks/releases/tag/v{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/ansys/pre-commit-hooks/pull/{issue})"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true
