[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-tech-review"
version = "0.1.0"
description = "A Python wrapper to create ansys-tech-review"
readme = "README.rst"
requires-python = ">=3.10,<4"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Synopsys, Inc. and ANSYS, Inc.", email = "pyansys-core@synopsys.com"},
]
maintainers = [
    {name = "Synopsys, Inc. and ANSYS, Inc.", email = "pyansys-core@synopsys.com"},
]
